--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Create package
         run: |
           export PACKAGE_FILE=`npm pack`
-          echo "PACKAGE_PATH=GoodLines/`echo $PACKAGE_FILE`" >> $GITHUB_ENV
+          echo "PACKAGE_PATH=`echo $PACKAGE_FILE`" >> $GITHUB_ENV
       - name: Upload Release Asset
         uses: actions/upload-release-asset@v1
         env:
